# lm-watermarking

./: LICENSE.md  MANIFEST.in  README.md  alternative_prf_schemes.py  app.py  demo_watermark.py  extended_watermark_processor.py  generate_100_hashes.py  homoglyphs.py  normalizers.py  ordered_sequence_generator.py  requirements.txt  result.rtf  setup.cfg  watermark_processor.py
experiments/: README.md  launch.py  process_rows.py  run_watermarking.py  submitit_utils.py  watermark.py  watermarking_analysis.ipynb  watermarking_example_finding.ipynb
homoglyph_data/: __init__.py  confusables_sept2022.json  languages.json
watermark_reliability_release/: PIPELINE.md  README.md  alternative_prf_schemes.py  attack_pipeline.py  broadcast_token_prefixes.py  evaluation_pipeline.py  generation_pipeline.py  requirements.txt  run_pipeline.sh  watermark_processor.py
watermark_reliability_release/detectgpt/: debug.sh  detectgpt_main.py  make_plot.py  plot.sh  run_detectgpt.sh
watermark_reliability_release/figure_notebooks/: baseline_comparison.ipynb  baseline_comparison_transpose.ipynb  core_robustness.ipynb  data_model.ipynb  detector_ablation.ipynb  human_study.ipynb  prompt_ablation.ipynb  scheme_ablation.ipynb
watermark_reliability_release/homoglyph_data/: categories.json
watermark_reliability_release/label_studio/: human_paraphrase_template.html  human_preference_evaluation_template.html  task_instructions.md
watermark_reliability_release/local_tokenizers/: tokenization_llama.py
watermark_reliability_release/metrics/: coherence.py  detect_retrieval.py  mauve.py  p_sp.py  repetition_diversity.py
watermark_reliability_release/misc_ipynbs_and_scripts/: annotation_prep.ipynb  detectgpt_exploration.ipynb  join_jsonl_prefix_files.ipynb  mauve_coherence_metrics_exploration.ipynb  repetition_metric_exploration.ipynb  run_length_exploration.ipynb
watermark_reliability_release/utils/: apply_vicuna_delta.py  io.py  (+9 more)
(+83 files in other folders)
