[metadata]
name = lm-watermarking
version = 0.1.0
author = Authors of 'A Watermark for Large Language Models'
author_email = jkirchen@umd.edu
url = https://github.com/jwkirchenbauer/lm-watermarking
description = Implementation of watermark algorithms for large language models.
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
license = Apache 2.0
license_file = LICENSE.md
platform = any
keywords = Machine Learning, NLP, Language Models, Watermark, Safety, Model Output Detection
classifiers =
    Topic :: Security
    License :: OSI Approved :: Apache 2.0
    Operating System :: OS Independent
    Programming Language :: Python
homepage = https://github.com/jwkirchenbauer/lm-watermarking
repository = https://github.com/jwkirchenbauer/lm-watermarking
documentation = https://arxiv.org/abs/2301.10226

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.9
packages = find:

setup_requires =
    setuptools

install_requires =
    nltk
    scipy
    torch
    transformers
    tokenizers

[tool.black]
line-length = 140

[check-manifest]
ignore =
    .ipynb
    .sh

#inspired by https://github.com/pytorch/pytorch/blob/master/.flake8
[flake8]
select = B,C,E,F,P,T4,W,B9
max-line-length = 140
extend-ignore = E203

ignore =
    E203,E305,E402,E501,E721,E741,F821,F841,F999,W503,W504,C408,E302,W291,E303,
    # shebang has extra meaning in fbcode lints, so I think it's not worth trying
    # to line this up with executable bit
    EXE001,
    # these ignores are from flake8-bugbear; please fix!
    B007,B008,
    # these ignores are from flake8-comprehensions; please fix!
    C400,C401,C402,C403,C404,C405,C407,C411,C413,C414,C415
    #unignored: F403,F405,
    D102,D103,D403 # for doc linting

  exclude =
      .git
      __pycache__
      log/*
